jalv (1.6.2) stable;

  * Fix compilation with recent Gtkmm versions that require C++11
  * Add jalv -i option to ignore stdin for background use
  * Add several commands to console interface
  * Add support for running as an internal Jack client (thanks Timo Wischer)
  * Make Suil dependency optional
  * Remove support for deprecated event and uri-map extensions
  * Fix Jack deactivation
  * Fix potential crash when closed with worker (thanks JP Cimalando)
  * Fix potential hang after Ctrl-c in console interface (thanks Laxmi Devi)
  * Add support for underscore in port names on command line
    (thanks Jośe Fernando Moyano)

 -- David Robillard <d@drobilla.net>  Thu, 06 Jun 2019 22:38:01 +0200

jalv (1.6.0) stable;

  * Support CV ports if Jack metadata is enabled (patch from Hanspeter Portner)
  * Fix unreliable UI state initialization (patch from Hanspeter Portner)
  * Fix memory error on preset save resulting in odd bundle names
  * Improve preset support
  * Support numeric and string plugin properties (event-based control)
  * Support thread-safe state restoration
  * Update UI when internal plugin state is changed during preset load
  * Add generic Qt control UI from Amadeus Folego
  * Add PortAudio backend (compile time option, audio only)
  * Set Jack port order metadata
  * Allow Jack client name to be set from command line (thanks Adam Avramov)
  * Add command prompt to console version for changing controls
  * Add option to print plugin trace messages
  * Print colorful log if output is a terminal
  * Exit on Jack shutdown (patch from Robin Gareus)
  * Report Jack latency (patch from Robin Gareus)
  * Exit GUI versions on interrupt
  * Fix semaphore correctness issues
  * Use moc-qt4 if present for systems with multiple Qt versions
  * Add Qt5 version

 -- David Robillard <d@drobilla.net>  Wed, 04 Jan 2017 12:24:58 -0500

jalv (1.4.6) stable;

  * Show newly saved presets in the preset menu