@@ -1,3 +1,9 @@
+jalv (1.6.3) unstable;
+
+  * Use screen refresh rate with Gtk3 and Qt5
+
+ -- David Robillard <d@drobilla.net>  Sun, 03 Nov 2019 19:15:04 +0000
+
 jalv (1.6.2) stable;
 
   * Fix compilation with recent Gtkmm versions that require C++11
